refactor: rebrand Vlog to Capsule and fix desktop sidebar layout

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="VLOGSPHERE - AI-Ready Visual Vlogging Platform. Create, share, and discover amazing visual content with futuristic design and AI-powered features."
+      content="Capsule - AI-Ready Visual Capsule Platform. Create, share, and discover amazing visual content with futuristic design and AI-powered features."
     />
     <meta
       name="keywords"
-      content="vlogging, platform, AI, visual content, video sharing, content creation"
+      content="vlogging, platform, AI, visual content, video sharing, content creation, capsule"
     />
-    <meta name="author" content="VLOGSPHERE Team" />
+    <meta name="author" content="Capsule Team" />
 
     <!-- Open Graph Meta Tags -->
     <meta
       property="og:title"
-      content="VLOGSPHERE - AI-Ready Visual Vlogging Platform"
+      content="Capsule - AI-Ready Visual Vlogging Platform"
     />
     <meta
       property="og:description"
@@ -31,7 +31,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="VLOGSPHERE - AI-Ready Visual Vlogging Platform"
+      content="Capsule - AI-Ready Visual Vlogging Platform"
     />
     <meta
       name="twitter:description"
@@ -53,7 +53,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" /> -->
     <link rel="manifest" href="/site.webmanifest" />
 
-    <title>VLOGSPHERE - AI-Ready Visual Vlogging Platform</title>
+    <title>Capsule - AI-Ready Visual Capsule Platform</title>
   </head>
   <body>
     <div id="root"></div>
